--- a/app/templates/grafik.html
+++ b/app/templates/grafik.html
@@ -81,7 +81,7 @@ tr:hover            { background-color: #ffff99;}
                 
                     
                     <li>
-                       <form id="form1" action="http://localhost:5151/index" method="post"></form>
+                       <form id="form1" action="http://128.199.208.34:5000/index" method="post"></form>
                    
                         
                     <a href="javascript:;" onclick="document.getElementById('form1').submit();">
@@ -90,10 +90,10 @@ tr:hover            { background-color: #ffff99;}
                         
                     </li>
                     <li>
-                        <a href="http://localhost:5151/load_data"><i class="fa fa-desktop fa-3x"></i> Load Data</a>
+                        <a href="http://128.199.208.34:5000/load_data"><i class="fa fa-desktop fa-3x"></i> Load Data</a>
                     </li>
                     <li>
-                    <form id="form2" action="http://localhost:5151/text_mining" method="post"></form>
+                    <form id="form2" action="http://128.199.208.34:5000/text_mining" method="post"></form>
                          <a href="javascript:;" onclick="document.getElementById('form2').submit();">
                             
                         <i class="fa fa-dashboard fa-3x"></i>Text Mining</a>
@@ -102,7 +102,7 @@ tr:hover            { background-color: #ffff99;}
                         <a  href="table.html"><i class="fa fa-table fa-3x"></i> Hasil</a>
                     </li>
                     <li>
-                        <a class="active-menu" href="http://localhost:5151/grafik"><i class="fa fa-bar-chart-o fa-3x"></i> Grafik</a>
+                        <a class="active-menu" href="http://128.199.208.34:5000/grafik"><i class="fa fa-bar-chart-o fa-3x"></i> Grafik</a>
                     </li>   
                       
                     <li>
