--- a/app/templates/hasil_upload.html
+++ b/app/templates/hasil_upload.html
@@ -36,7 +36,7 @@ tr:nth-child(even)  { background-color:#fff; }
 tr:hover            { background-color: #ffff99;}
 </style>
 <body>
-<form action="http://localhost:5151/hasil_select" method="POST">
+<form action="http://128.199.208.34:5000/hasil_select" method="POST">
     <table>
         <tr>
             <td>
