--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -47,7 +47,7 @@ font-size: 16px;"> </div>
                         <a class="active-menu"  href="index.html"><i class="fa fa-dashboard fa-3x"></i>Home</a>
                     </li>
                     <li>
-                        <a href="http://localhost:5151/load_data"><i class="fa fa-desktop fa-3x"></i> Load Data</a>
+                        <a href="http://128.199.208.34:5000/load_data"><i class="fa fa-desktop fa-3x"></i> Load Data</a>
                     </li>
                     <li>
                         <a  href="tab-panel.html"><i class="fa fa-desktop fa-3x"></i> Text Mining</a>
