--- a/app/templates/upload_data.html
+++ b/app/templates/upload_data.html
@@ -3,7 +3,7 @@
     <title>Upload Data</title>
 </head>
 <body>
-<form action="http://localhost:5151/upload_hasil" method="POST" enctype="multipart/form-data">
+<form action="http://128.199.208.34:5000/upload_hasil" method="POST" enctype="multipart/form-data">
     <input type="file" name="file">
     <input type="text" name="sheet">
     <button type="submit">UPLOAD</button>
