--- a/app/templates/coba.html
+++ b/app/templates/coba.html
@@ -10,7 +10,7 @@
         {{ table|safe }}
     {% endfor %}
     
-<form action="http://localhost:5151/dataframe" method="POST" enctype="multipart/form-data">
+<form action="http://128.199.208.34:5000/dataframe" method="POST" enctype="multipart/form-data">
     <button type="submit">HASILNYA</button>
 </form>
 </center>
