--- a/app/templates/hasil_cluster.html
+++ b/app/templates/hasil_cluster.html
@@ -74,7 +74,7 @@ tr:hover            { background-color: #ffff99;}
                 
                     
                     <li>
-                       <form id="form1" action="http://localhost:5151/index" method="post"></form>
+                       <form id="form1" action="http://128.199.208.34:5000/index" method="post"></form>
                    
                         
                     <a href="javascript:;" onclick="document.getElementById('form1').submit();">
@@ -83,10 +83,10 @@ tr:hover            { background-color: #ffff99;}
                         
                     </li>
                     <li>
-                        <a href="http://localhost:5151/load_data"><i class="fa fa-desktop fa-3x"></i> Load Data</a>
+                        <a href="http://128.199.208.34:5000/load_data"><i class="fa fa-desktop fa-3x"></i> Load Data</a>
                     </li>
                     <li>
-                    <form id="form2" action="http://localhost:5151/text_mining" method="post"></form>
+                    <form id="form2" action="http://128.199.208.34:5000/text_mining" method="post"></form>
                          <a href="javascript:;" onclick="document.getElementById('form2').submit();">
                             
                         <i class="fa fa-dashboard fa-3x"></i>Text Mining</a>
@@ -95,7 +95,7 @@ tr:hover            { background-color: #ffff99;}
                         <a class="active-menu" href="table.html"><i class="fa fa-table fa-3x"></i> Hasil</a>
                     </li>
                     <li>
-                        <a href="http://localhost:5151/grafik"><i class="fa fa-bar-chart-o fa-3x"></i> Grafik</a>
+                        <a href="http://128.199.208.34:5000/grafik"><i class="fa fa-bar-chart-o fa-3x"></i> Grafik</a>
                     </li>   
                       
                     <li>
@@ -140,7 +140,7 @@ tr:hover            { background-color: #ffff99;}
 
     <br>
 
-    <form action="http://localhost:5151/grafik" method="POST" enctype="multipart/form-data">
+    <form action="http://128.199.208.34:5000/grafik" method="POST" enctype="multipart/form-data">
     <button type="submit">Grafik</button>
     </form>
 
