--- a/app/templates/load_data.html
+++ b/app/templates/load_data.html
@@ -59,7 +59,7 @@
                 
                     
                     <li>
-                       <form id="form1" action="http://localhost:5151/index" method="post">
+                       <form id="form1" action="http://128.199.208.34:5000/index" method="post">
                    
                         
                     </form>
@@ -69,7 +69,7 @@
                         
                     </li>
                     <li>
-                        <a class="active-menu" href="http://localhost:5151/load_data"><i class="fa fa-desktop fa-3x"></i> Load Data</a>
+                        <a class="active-menu" href="http://128.199.208.34:5000/load_data"><i class="fa fa-desktop fa-3x"></i> Load Data</a>
                     </li>
                     <li>
                         <a  href="tab-panel.html"><i class="fa fa-desktop fa-3x"></i> Text Mining</a>
@@ -118,7 +118,7 @@
                   
                     
 
-                    <form id="upload" action="http://localhost:5151/load_data2" method="POST" enctype="multipart/form-data">
+                    <form id="upload" action="http://128.199.208.34:5000/load_data2" method="POST" enctype="multipart/form-data">
                         <input type="file" name="file" class="btn btn-default btn-lg" >
                     <br>
                     <input type="text" name="sheet" placeholder="Ketik Sheet" class="btn btn-default btn-lg" >
