--- a/app/templates/load_data3.html
+++ b/app/templates/load_data3.html
@@ -69,7 +69,7 @@ tr:hover            { background-color: #ffff99;}
                 
                     
                     <li>
-                       <form id="form1" action="http://localhost:5151/index" method="post"></form>
+                       <form id="form1" action="http://128.199.208.34:5000/index" method="post"></form>
                    
                         
                     <a href="javascript:;" onclick="document.getElementById('form1').submit();">
@@ -78,10 +78,10 @@ tr:hover            { background-color: #ffff99;}
                         
                     </li>
                     <li>
-                        <a class="active-menu" href="http://localhost:5151/load_data"><i class="fa fa-desktop fa-3x"></i> Load Data</a>
+                        <a class="active-menu" href="http://128.199.208.34:5000/load_data"><i class="fa fa-desktop fa-3x"></i> Load Data</a>
                     </li>
                     <li>
-                    <form id="form2" action="http://localhost:5151/text_mining" method="post"></form>
+                    <form id="form2" action="http://128.199.208.34:5000/text_mining" method="post"></form>
                          <a href="javascript:;" onclick="document.getElementById('form2').submit();">
                             
                         <i class="fa fa-desktop fa-3x"></i>Text Mining</a>
@@ -133,7 +133,7 @@ tr:hover            { background-color: #ffff99;}
     <br>
     <br>
     <br>
-    <form action="http://localhost:5151/text_mining" method="POST" enctype="multipart/form-data">
+    <form action="http://128.199.208.34:5000/text_mining" method="POST" enctype="multipart/form-data">
     <button type="submit">Preprocessing</button>
 </form>
     
