--- a/app/templates/tampil_hasil_select.html
+++ b/app/templates/tampil_hasil_select.html
@@ -13,7 +13,7 @@
         {{ table|safe }}
     {% endfor %}
 
-    <form action="http://localhost:5151/coba" method="POST" enctype="multipart/form-data">
+    <form action="http://128.199.208.34:5000/coba" method="POST" enctype="multipart/form-data">
     <button type="submit">Clustering</button>
 </form>
 </center>
