--- a/app/templates/tokenizing.html
+++ b/app/templates/tokenizing.html
@@ -9,7 +9,7 @@
     {% for table in tables %}
         {{ table|safe }}
     {% endfor %}
-<form action="http://localhost:5151/filtering" method="POST" enctype="multipart/form-data">
+<form action="http://128.199.208.34:5000/filtering" method="POST" enctype="multipart/form-data">
     <button type="submit">FILTERING</button>
 </form>
 </center>
