change flask tesis

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,7 +25,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-collapse">
                     <span class="sr-only">Admin </span>
                 </button>
-                <a class="navbar-brand" href="index.html"><b>K-Harmonic</b></a>
+                <a class="navbar-brand" href="index.html"><b>TESIS</b></a>
             </div>
             <ul class="nav navbar-top-links navbar-right">
                 <li class="dropdown">
@@ -55,9 +55,9 @@
                                 <form id="form1" action="http://128.199.208.34:5000/tokenisasi" method="post"></form>
                                 <a href="javascript:;" onclick="document.getElementById('form1').submit();"><i class="fa fa-edit"></i> Text Mining</a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <a href="inputK"><i class="fa fa-qrcode"></i> Clustering</a>
-                            </li>
+                            </li> -->
                             <li>
                                 <form id="form2" action="http://128.199.208.34:5000/allfile" method="post"></form>
                                 <a href="javascript:;" onclick="document.getElementById('form2').submit();"><i class="fa fa-desktop"></i>Hasil</a>
@@ -77,11 +77,9 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h1 class="page-header">
-                            Dashboard <small>Summary of your App</small>
+                            Dashboard 
                         </h1>
-                        <p>K-harmonic Means (KHM) pertama kali diperkenalkan oleh Zhang, Hsu dan Dayal pada tahun 1999 dari HP Laboratories Palo Alto.
-                            KHM dikembangkan untuk menangani masalah utama dalam K-Means yang hasil clustering-nya sangat sensitif dengan inisialisasi data yang dijadikan sebagai centroid awal.
-                            Hasil yang sering berbeda (local optima) dari proses clustering-nya (pada set data yang sama) disebabkan oleh inisialisasi centroid yang berbeda. </p>
+                        <p>Flask Tesis </p>
 
                 </div>
                 </div>
