--- a/app/templates/filtering.html
+++ b/app/templates/filtering.html
@@ -27,7 +27,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-collapse">
                     <span class="sr-only">Admin </span>
                 </button>
-                <a class="navbar-brand" href="index"><b>K-Harmonic</b></a>
+                <a class="navbar-brand" href="index"><b>TESIS</b></a>
             </div>
             <ul class="nav navbar-top-links navbar-right">
                 <li class="dropdown">
@@ -60,9 +60,9 @@
                           <a class="active-menu" href="http://128.199.208.34:5000/tokenisasi"><i class="fa fa-edit"></i> Text Mining</a>
 
                       </li>
-                      <li>
+                      <!-- <li>
                           <a href="#"><i class="fa fa-qrcode"></i> Clustering</a>
-                      </li>
+                      </li> -->
                       <li>
                           <a  href="#"><i class="fa fa-desktop"></i> Hasil</a>
 
@@ -83,7 +83,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h1 class="page-header">
-                            Hasil Filtering Judul Skripsi
+                            Hasil Filtering 
                         </h1>
                         <ol class="breadcrumb">
                           <li class="breadcrumb-item"><a href="http://128.199.208.34:5000/tokenisasi">Tokenisasi</a></li>
