--- a/app/templates/hasilexcel.html
+++ b/app/templates/hasilexcel.html
@@ -25,7 +25,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-collapse">
                     <span class="sr-only">Admin </span>
                 </button>
-                <a class="navbar-brand" href="index"><b>K-Harmonic</b></a>
+                <a class="navbar-brand" href="index"><b>TESIS</b></a>
             </div>
             <ul class="nav navbar-top-links navbar-right">
                 <li class="dropdown">
@@ -60,9 +60,9 @@
                           <!--<form id="form1" action="#" method="post"></form>-->
                           <!--<a href="#" onclick="document.getElementById('form1').submit();"><i class="fa fa-edit"></i> Text Mining</a>-->
                       </li>
-                      <li>
+                      <!-- <li>
                           <a href="#"><i class="fa fa-qrcode"></i> Clustering</a>
-                      </li>
+                      </li> -->
                       <li>
                           <a href="#"><i class="fa fa-desktop"></i> Hasil</a>
                           <!--<form id="form2" action="#" method="post"></form>-->
@@ -87,7 +87,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h1 class="page-header">
-                            Upload Data Judul Skripsi
+                            Upload Data
                         </h1>
                     </div>
                     </div>
