--- a/app/templates/k-harmonic.html
+++ b/app/templates/k-harmonic.html
@@ -27,7 +27,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-collapse">
                     <span class="sr-only">Admin </span>
                 </button>
-                <a class="navbar-brand" href="index"><b>K-Harmonic</b></a>
+                <a class="navbar-brand" href="index"><b>TESIS</b></a>
             </div>
             <ul class="nav navbar-top-links navbar-right">
                 <li class="dropdown">
@@ -60,9 +60,9 @@
                           <form id="form1" action="http://128.199.208.34:5000/tokenisasi" method="post"></form>
                           <a  href="javascript:;" onclick="document.getElementById('form1').submit();"><i class="fa fa-edit"></i> Text Mining</a>
                       </li>
-                      <li>
+                      <!-- <li>
                           <a class="active-menu" href="inputK"><i class="fa fa-qrcode"></i> Clustering</a>
-                      </li>
+                      </li> -->
                       <li>
                           <form id="form2" action="http://128.199.208.34:5000/allfile" method="post"></form>
                           <a href="javascript:;" onclick="document.getElementById('form2').submit();"><i class="fa fa-desktop"></i>Hasil</a>
@@ -83,7 +83,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h1 class="page-header">
-                            K-harmonic Means
+                            TESIS Means
                         </h1>
                     </div>
                     </div>
