--- a/app/templates/stemming.html
+++ b/app/templates/stemming.html
@@ -27,7 +27,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-collapse">
                     <span class="sr-only">Admin </span>
                 </button>
-                <a class="navbar-brand" href="index"><b>K-Harmonic</b></a>
+                <a class="navbar-brand" href="index"><b>TESIS</b></a>
             </div>
             <ul class="nav navbar-top-links navbar-right">
                 <li class="dropdown">
@@ -63,9 +63,9 @@
                           <!--<form id="form1" action="#" method="post"></form>-->
                           <!--<a href="#" onclick="document.getElementById('form1').submit();"><i class="fa fa-edit"></i> Text Mining</a>-->
                       </li>
-                      <li>
+                      <!-- <li>
                           <a href="#"><i class="fa fa-qrcode"></i> Clustering</a>
-                      </li>
+                      </li> -->
                       <li>
                           <a  href="#"><i class="fa fa-desktop"></i> Hasil</a>
                           <!--<form id="form2" action="#" method="post"></form>-->
@@ -88,7 +88,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h1 class="page-header">
-                            Hasil Stemming Judul Skripsi
+                            Hasil Stemming 
                         </h1>
                         <ol class="breadcrumb">
                           <li class="breadcrumb-item"><a href="http://128.199.208.34:5000/tokenisasi">Tokenisasi</a></li>
@@ -116,10 +116,10 @@
        </thead>
    </table>
 </div>
-     <form action="http://128.199.208.34:5000/inputK"  method="POST" enctype="multipart/form-data">
+     <!-- <form action="http://128.199.208.34:5000/inputK"  method="POST" enctype="multipart/form-data">
         <center>
 
-            <button class="btn btn-primary" type="submit">K-Harmonic Means</button>
+            <button class="btn btn-primary" type="submit">TESIS Means</button> -->
 
         </center>
     </form>
