--- a/app/templates/upload_data.html
+++ b/app/templates/upload_data.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
 
     <meta  name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Upload Data Skripsi </title>
+    <title> Upload Data </title>
     <!-- Bootstrap Styles-->
     <link rel="stylesheet" href={{url_for('static',filename='assets/css/bootstrap.css')}}  />
     <!-- FontAwesome Styles-->
@@ -26,7 +26,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-collapse">
                     <span class="sr-only">Admin </span>
                 </button>
-                <a class="navbar-brand" href="index"><b>K-Harmonic</b></a>
+                <a class="navbar-brand" href="index"><b>TESIS</b></a>
             </div>
             <ul class="nav navbar-top-links navbar-right">
                 <li class="dropdown">
@@ -60,9 +60,9 @@
                           <form id="form1" action="http://128.199.208.34:5000/tokenisasi" method="post"></form>
                           <a href="javascript:;" onclick="document.getElementById('form1').submit();"><i class="fa fa-edit"></i> Text Mining</a>
                       </li>
-                      <li>
+                      <!-- <li>
                           <a href="inputK"><i class="fa fa-qrcode"></i> Clustering</a>
-                      </li>
+                      </li> -->
                       <li>
                           <form id="form2" action="http://128.199.208.34:5000/allfile" method="post"></form>
                           <a href="javascript:;" onclick="document.getElementById('form2').submit();"><i class="fa fa-desktop"></i>Hasil</a>
@@ -83,7 +83,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h1 class="page-header">
-                            Upload Data Judul Skripsi
+                            Upload Data
                         </h1>
                     </div>
                     </div>
@@ -100,7 +100,7 @@
                                 <table>
                                     <tr>
                                      <div class="form-group">
-                                         <label>Inputkan Data Judul Skripsi</label>
+                                         <label>Inputkan Data </label>
                                          <input type="file" name="file" accept=".xlsx" id="filePicker" required>
                                          <small>**File dengan extensi .xlsx yang dapat di Upload</small>
                                         </div>
